--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,10 @@ footer_links:
   - title: Feed
     url: atom.xml
     icon: fas fa-rss-square
+
+footer_scripts:
+  - /assets/js/main.min.js
+  - https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/js/all.js
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
