--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "devDependencies": {
     "badge-maker": "^3",
+    "js-yaml": ">=3.13.1",
     "simple-icons": "^4",
-    "svgo": "^0.7.2"
+    "svgo": "^2.3.0"
   }
 }
