--- a/_config.yml
+++ b/_config.yml
@@ -101,10 +101,13 @@ author:
   - title: Telegram
     url: https://t.me/ahmubashshir
     icon: fab fa-telegram
-footer_scripts:
-#- https://unpkg.com/jquery/dist/jquery.min.js
-- /assets/js/main.min.js
+
+head_scripts:
+- https://unpkg.com/jquery@3.3.1/dist/jquery.min.js
 - https://use.fontawesome.com/releases/v5.0.12/js/all.js
+
+footer_scripts:
+- /assets/js/main.min.js
 
 footer_links:
 - title: GitHub
