Add categories for pwa
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,8 @@
 {
     "name": "{{ $.Site.Title }}",
     "description": "{{ $.Site.Params.description }}",
+    "short_name": "{{ $.Site.Title }}",
+    "categories": {{ $.Site.Params.keywords | jsonify}},
     "start_url": "/",
     "scope": "/",
     "icons": [
