--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -23,6 +23,7 @@ hidemeta = false
 hideSummary = false
 showtoc = true
 tocopen = false
+images = ['/assets/cover/home.webp']
 
 [label]
 text = "‍"
