Use templates for custom features
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-/public
-.hugo_build.lock
-node_modules
+*
+!/.gitignore
+!/go.mod
+!/go.sum
+!/.github/**
+!/archetypes/**
+!/assets/**
+!/config/**
+!/content/**
+!/data/**
+!/layouts/**
+!/static/**
+!/.github
+!/archetypes
+!/assets
+!/config
+!/content
+!/data
+!/layouts
+!/static
