Update build action
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,4 +1,3 @@
-env = 'production'
 description = 'Evidence of my terrible writing skills.'
 keywords = [
 	'blog', 'linux',
@@ -16,6 +15,7 @@ ShowShareButtons = true
 ShowPostNavLinks = true
 ShowBreadCrumbs = true
 ShowCodeCopyButtons = true
+enableGitInfo = true
 disableSpecial1stPost = true
 disableScrollToTop = false
 comments = true
