--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm install --prefix data
 
       - name: build(site)
-        run: hugo --minify --enableGitInfo --logFile /dev/stderr
+        run: hugo --environment production --minify --log --verboseLog
       - name: build(badges)
         run: npm start --prefix data
 #      - name: prepare archive
