--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,17 +35,17 @@ jobs:
       - name: init-cache(node)
         uses: actions/cache@v2
         with:
-          path: ./data/node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('data/package-lock.json') }}
+          path: ./helper/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('helper/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
       - name: init-badgemaker(npm)
-        run: npm install --prefix data
+        run: npm install --prefix helper
 
+      - name: build(helper/badge)
+        run: npm run badge --prefix helper
       - name: build(site)
         run: hugo --environment production --minify --log --verboseLog
-      - name: build(badges)
-        run: npm start --prefix data
 #      - name: prepare archive
 #        run: tar --dereference --hard-dereference --directory public -cvf artifact.tar .
 #      - name: upload archive
