--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,5 @@
-*
-!/.gitignore
-!/go.mod
-!/go.sum
-!/.github/**
-!/archetypes/**
-!/assets/**
-!/config/**
-!/content/**
-!/data/**
-!/layouts/**
-!/static/**
-!/.github
-!/archetypes
-!/assets
-!/config
-!/content
-!/data
-!/layouts
-!/static
-!/helper
-!/helper/**
+/public
+/node_modules
+/.hugo_build.lock
+/data/badge.json
 /static/assets/badges
-/helper/node_modules
