Update sw.js and misc
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -55,7 +55,7 @@ disableInlineCSS = true
 disableInlineCSS = true
 
 [permalinks]
-post = '/:section/:year/:month/:day/:filename'
+post = '/:section/:year/:month/:day/:filename/'
 page = '/:filename'
 
 [[module.imports]]
