--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -98,7 +98,7 @@ url = 'https://reddit.com/u/ahmubashshir'
 name = 'Twitter'
 url = 'https://twitter.com/ahmubashshir'
 [[socialIcons]]
-name = 'Last.fm'
+name = 'Lastfm'
 url = 'https://www.last.fm/user/ahmubashshir'
 [[socialIcons]]
 name = 'Goodreads'
