Add proper licensing info
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -24,6 +24,7 @@ hideSummary = false
 showtoc = true
 tocopen = false
 images = ['/assets/cover/home.png']
+hideFooter = true
 
 [label]
 text = "‍"
