layouts: Add posts index
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -54,8 +54,8 @@ disableInlineCSS = true
 disableInlineCSS = true
 
 [permalinks]
-post = '/:section/:year/:month/:day/:filename/'
-page = '/:filename'
+post = '/post/:year/:month/:day/:filename/'
+rants = '/post/:year/:month/:day/:filename/'
 
 [[module.imports]]
 path = "cj.rs/gohugo-asciinema"
