--- a/.github/workflows/hugo-build-deploy.yml
+++ b/.github/workflows/hugo-build-deploy.yml
@@ -1,9 +1,9 @@
-name: build-deploy
+name: hugo-build-deploy
 on:
-- workflow_dispatch
-#  push:
-#    branches:
-#    - master
+  workflow_dispatch:
+  push:
+    branches:
+    - master
 
 jobs:
   build:
@@ -51,13 +51,6 @@ jobs:
       with:
         name: github-pages
         path: ./artifact.tar
-        if-no-files-found: warn
-
-    - name: push(log)
-      uses: actions/upload-artifact@main
-      with:
-        name: build.log
-        path: ./build.log
         if-no-files-found: warn
 
   deploy:
